# pajeng

./: CMakeLists.txt  LabBook.org  README.md  README.org  flake.nix
cmake/: FindASCIIDoc.cmake  FindCairo.cmake  FindGraphviz.cmake
data/: perf_results.csv
doc/: CMakeLists.txt  pj_dump.1.txt  pj_equals.1.txt  pj_gantt.1.txt  pj_validate.1.txt
doc/lang-paje/: CMakeLists.txt  definitions.tex  lang-paje.tex
examples/: categories-cat.plist  g5k-uncat.plist  g5k.trace  ms-cat.plist  ms.trace
pkgconfig/: CMakeLists.txt  libtupi.pc.cmake
scripts/: pj_gantt
src/: CMakeLists.txt  PajeComponent.cc  PajeComponent.h  PajeData.cc  PajeData.h  PajeEvent.cc  PajeEvent.h  PajeEventDecoder.cc  PajeEventDecoder.h  PajeEventDefinition.cc  PajeEventDefinition.h  PajeFileReader.cc  PajeFileReader.h  PajeObject.h  PajeSimulator.cc  PajeSimulator.h  PajeTraceController.cc  PajeTraceController.h  PajeType.cc  PajeType.h  main-paje.cc  main.cc
src/dotfd/: basic.h  main.cc  main.h  runner.cc  runner.h  tupiew.h
src/fb/: CMakeLists.txt  PajeFlexDecoder.cc  PajeFlexDecoder.h  PajeFlexReader.cc  PajeFlexReader.h  main.cc  main.h  parser.y  scanner.l
src/libpaje/: CMakeLists.txt  PajeColor.cc  PajeColor.h  PajeComponent.cc  PajeComponent.h  PajeContainer.cc  PajeContainer.h  PajeData.cc  PajeData.h  PajeDefinitions.cc  PajeDefinitions.h  PajeEntity.cc  PajeEntity.h  PajeEntropy.cc  PajeEntropy.h  PajeEnum.h  PajeEvent.cc  PajeEvent.h  PajeEventDecoder.cc  PajeEventDecoder.h  PajeEventDefinition.cc  PajeEventDefinition.h  PajeException.cc  PajeException.h  PajeFileReader.cc  PajeFileReader.h  PajeFlexReader.cc  PajeFlexReader.h  PajeObject.cc  PajeObject.h  PajeProbabilisticSimulator.cc  PajeProbabilisticSimulator.h  PajeProtocols.h  PajeSimulator+Commands.cc  PajeSimulator+Queries.cc  PajeSimulator.cc  PajeSimulator.h  PajeTraceController.cc  PajeTraceController.h  PajeTraceEvent.cc  (+13 more)
src/libtupi/: box.c  particle.c  tupi_private.h
src/paje/: PajeApplication.cc  PajeApplication.h  PajeColor.cc  PajeColor.h  PajeComponent.cc  PajeComponent.h  PajeContainer.cc  PajeContainer.h  PajeData.cc  PajeData.h  PajeEntity.cc  PajeEntity.h  PajeEvent.cc  PajeEvent.h  PajeEventDecoder.cc  PajeEventDecoder.h  PajeEventDefinition.cc  PajeEventDefinition.h  PajeFileReader.cc  PajeFileReader.h  PajeGraphicsItem.cc  PajeGraphicsItem.h  PajeObject.h  PajeRenderingThread.cc  PajeRenderingThread.h  PajeSimulator+Commands.cc  PajeSimulator+Queries.cc  PajeSimulator.cc  PajeSimulator.h  PajeSpaceTimeFrame.cc  PajeSpaceTimeFrame.h  PajeSpaceTimeView.cc  PajeSpaceTimeView.h  PajeTraceController.cc  PajeTreemap.cc  PajeTreemap.h  PajeTreemapFrame.cc  PajeTreemapFrame.h  PajeTreemapItem.cc  PajeTreemapItem.h  (+9 more)
src/paje_dump/: main.cc
src/paje_interrogate/: main.cc
src/paje_validate/: main.cc
src/pajelib/: PajeColor.h  PajeComponent.cc  PajeComponent.h  PajeContainer.cc  PajeContainer.h  PajeEntity.cc  PajeSimulator+Commands.cc  PajeSimulator+Queries.cc  PajeSimulator.cc  PajeSimulator.h  PajeTraceController.h  PajeType.cc  PajeType.h
src/pajeng/: CMakeLists.txt  PajeApplication.cc  PajeApplication.h  PajeGraphicsItem.cc  PajeGraphicsItem.h  PajeRenderingThread.cc  PajeRenderingThread.h  PajeSpaceTimeFrame.cc  PajeSpaceTimeView.cc  PajeSpaceTimeView.h  PajeThreadReader.h  PajeTreemap.cc  PajeTreemapFrame.h  PajeTreemapView.cc  PajeTreemapView.h  PajeWindow.cc  PajeWindow.h  STEntityTypeLayout.cc  STEntityTypeLayout.h  main.cc
src/pj_dump/: main.cc  pj_dump.cc
src/pj_validate/: main.cc  pj_validate.cc
src/tools/: CMakeLists.txt  pj_dump.cc  pj_dump_csv.cc  pj_equals.cc  pj_validate.cc
src/tupi/: bary.c  box.c  cell.c  dynar.c  layout.c  node.c  particle.c  tupi_functions.h  tupi_private.h
src/tupilib/: basic.c  cell.c  dict.c  dynar.c  layout.c  node.c  tupi.h  tupi_functions.h  tupi_private.h
src/tupiwx/: basic.cc  main.cc  main.h  runner.cc  runner.h  tupiew.cc  tupiew.h
src/utils/: CMakeLists.txt  PajeThreadReader.cc  PajeThreadReader.h  libpajeutils.pc.cmake
src/viva/: PajeThreadReader.h  TimeInterval.cc  TimeInterval.h  VivaApplication.cc  VivaApplication.h  VivaGraph.cc  VivaGraph.h  VivaGraphView.cc  VivaGraphView.h  VivaLayoutRunner.cc  VivaLayoutRunner.h  VivaNode.cc  VivaNode.h  VivaRenderingThread.cc  VivaRenderingThread.h  VivaResource.qrc  VivaWindow.cc  VivaWindow.h  basic.cc  basic.h  graphframe.cc  graphframe.h  graphview.cc  graphview.h  graphwindow.cc  graphwindow.h  loadingbar.cc  loadingbar.h  main.cc  main.h  runner.cc  runner.h  timesliceframe.cc  timesliceframe.h  timeslicewindow.cc  timeslicewindow.h  triview.cc  triview.h
src/wapaje/: WapajeApplication.cc  WapajeApplication.h  WapajeGraphicsItem.cc  WapajeGraphicsItem.h  WapajeRenderingThread.cc  WapajeRenderingThread.h  WapajeSpaceTimeFrame.cc  WapajeSpaceTimeFrame.h  WapajeSpaceTimeView.cc  WapajeSpaceTimeView.h  WapajeTreemap.cc  WapajeTreemap.h  WapajeTreemapFrame.cc  WapajeTreemapFrame.h  WapajeTreemapItem.cc  WapajeTreemapItem.h  WapajeTreemapView.cc  WapajeTreemapView.h  WapajeWindow.cc  WapajeWindow.h  main.cc
tests/: check_output_1.tesh  check_output_2.tesh  check_output_3.tesh  check_output_4.tesh  pj_dump_categories.tesh  pj_dump_csv_small.tesh  pj_dump_g5k.tesh  pj_dump_heinrich.tesh  pj_dump_ms.tesh  pj_dump_native_paje.tesh  pj_dump_shurakai.tesh  pj_dump_simu-mardi.tesh  pj_dump_small.tesh  pj_equals.tesh  pj_validate_categories.tesh  pj_validate_g5k.tesh  pj_validate_ms.tesh  pj_validate_simu-mardi.tesh
tests/scripts/: tesh
traces/: categories.trace  containers.trace  events.trace  gattaca.trace  gattaca2.trace  gattaca3.trace  links.trace  ms.trace  native_paje.trace  native_sample.trace  replay_output_shurakai_extract.trace  simgrid-fg126.trace  simu-mardi.trace  states.trace  variables.trace
traces/multiple_files/: root.trace
